--- a/eval_configs/dynabench_inference_13b.yaml
+++ b/eval_configs/dynabench_inference_13b.yaml
@@ -12,12 +12,12 @@ model:
   # If you want use LLaMA-2-chat,
   # some ckpts could be download from our provided huggingface repo
   # i.e.  https://huggingface.co/DAMO-NLP-SG/Video-LLaMA-2-13B-Finetuned
-  llama_model: "/home/murphy/data-hdd/videoqa/Video-LLaMA-2-13B-Finetuned/llama-2-13b-chat-hf"
-  ckpt: "/home/murphy/data-hdd/videoqa/Video-LLaMA-2-13B-Finetuned/VL_LLaMA_2_13B_Finetuned.pth"
+  llama_model: "/home/murphy/data-hdd/videoqa_model/Video-LLaMA-2-13B-Finetuned/llama-2-13b-chat-hf"
+  ckpt: "/home/murphy/data-hdd/videoqa_model/Video-LLaMA-2-13B-Finetuned/VL_LLaMA_2_13B_Finetuned.pth"
   equip_audio_branch: False
 
   fusion_head_layers: 2
-  max_frame_pos: 16
+  max_frame_pos: 32
   fusion_header_type: "seqTransf"
 
 
@@ -33,4 +33,4 @@ datasets:
         name: "blip_caption"
 
 run:
-  task: video_text_pretrain
+  task: video_text_finetuned
